@@ -1,3 +1,6 @@
+[B]Version v2.5.0[/B]
+- Added PlayCineFlix stream resolver.
+
 [B]Version v2.4.9[/B]
 - Added VideoPress stream resolver.
 
